--- a/views/home.html
+++ b/views/home.html
@@ -17,8 +17,8 @@
           <img class="logoHeader" src="./images/logo-mercado-liebre.svg" alt="" />
         </div>
         <div>
-          <input type="search" placeholder="Buscar productos, marcas y más">
-          <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+          <input type="search" placeholder="Buscar productos, marcas y más" class="search-field">
+          <button type="submit" class="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <h3 class= header-title><i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito</h3>
       </div>  
@@ -41,6 +41,7 @@
     <div class="home-banner"><img src='./images/img-home-banner.jpg' alt=''></div>
 
     <main>
+      <div class="full-main"></div>
         <section>
           <h3 class="main-title">Basado en tu última visita</h3>
           <div class="all-articles">
