--- a/views/home.html
+++ b/views/home.html
@@ -38,8 +38,8 @@
       </nav>
       <div class="burger-menu"><i class="fa-solid fa-bars"></i></div>
     </header>
-    <div class="home-banner"><img src='./images/img-home-banner.jpg' alt=''></div>
-
+    <img src='./images/img-home-banner.jpg' alt ='' class="home-banner" >
+    
     <main>
       <div class="full-main"></div>
         <section>
