--- a/views/login.html
+++ b/views/login.html
@@ -40,10 +40,10 @@
 
     <main>
         <form action="/">
-            <input type="text" name="user" placeholder="Nombre de usuario">
+            <input class="login" type="text" name="user" placeholder="Nombre de usuario">
             <br>
         
-            <input type="password" name="" placeholder="Contraseña">
+            <input class="login" type="password" name="" placeholder="Contraseña">
             <br>
             
             <button class="enviar" type="submit">Enviar</button>
