--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="./css/forms.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" >
 </head>
@@ -13,7 +13,7 @@
     <header>
         <div class="top-header">
           <div class="LOGO">
-            <img class="logoHeader" src="./images/logo-mercado-liebre.svg" alt="" />
+            <a href="/"><img class="logoHeader" src="./images/logo-mercado-liebre.svg" alt="" /></a>
           </div>
           <div>
             <input type="search" placeholder="Buscar productos, marcas y más">
@@ -23,16 +23,16 @@
         </div>  
         <nav>
           <ul class="lista1">
-            <li class="nav-buttons1"><a href="" target="_blank"> Ofertas</a></li>
-            <li class="nav-buttons1"><a href="" target="_blank"> Tiendas Oficiales</a></li>
-            <li class="nav-buttons1"><a href="" target="_blank"> Vender</a></li>
-            <li class="nav-buttons1"><a href="" target="_blank"> Ayuda</a></li>
+            <li class="nav-buttons1"><a href=""> Ofertas</a></li>
+            <li class="nav-buttons1"><a href=""> Tiendas Oficiales</a></li>
+            <li class="nav-buttons1"><a href=""> Vender</a></li>
+            <li class="nav-buttons1"><a href=""> Ayuda</a></li>
           </ul>
   
           <ul class="lista2">
-            <li class="nav-buttons2"><a href="/register" target="_blank"> Creá tu cuenta</a><i class="fa-regular fa-id-card"></i></li>
-            <li class="nav-buttons2"><a href="/login" target="_blank"> Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
-            <li class="nav-buttons2"><a href="" target="_blank"> Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+            <li class="nav-buttons2"><a href="/register"> Creá tu cuenta</a><i class="fa-regular fa-id-card"></i></li>
+            <li class="nav-buttons2"><a href="/login"> Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+            <li class="nav-buttons2"><a href=""> Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
           </ul>
         </nav>
         <div class="burger-menu"><i class="fa-solid fa-bars"></i></div>
