--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,51 +28,38 @@ header {
 }
 
 .logoHeader {
-    width: 45%;
+    width: 40vw;
     height: auto;
 }
 
-.top-header{
-    padding: 4% 3%;
-}
-
 .search-field {
-    width: 35vw;
-    padding: 5px 30px 5px 5px;
+    width: 32vw;
+    padding: 10px 40px 10px 10px;
     border: none;
     border-radius: 100px;
     outline: none;
-}
-  
+} 
 .search-button {
     background: transparent;
     border: none;
     outline: none;
     margin-left: -33px;
-}
-  
+} 
 .search-button img {
     width: 20px;
     height: 20px;
     object-fit: cover;
 }
 
-header input{
-    margin-top: 10px;
-    margin-left: 15px;
-}
-
 .header-title {
     text-align: center;
-    font-size: 1rem;
     font-weight: lighter;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 ul{
     margin-top: 15px;
 }
-
 li a {
     color: black;
     font-size: 12px;
@@ -85,7 +72,6 @@ li a {
     background-color: #1259c3;
     border-radius: 8px;
 }
-
 .fa-bars {
     font-size: 25px;
     color: white;
@@ -221,8 +207,30 @@ footer section h3{
 /* ------------------------- BREAKPOINTS - MEDIA QUERIES --------------------*/
 /* MOBILE */
 @media (max-width: 360px){
-    nav {
-        display: none;
+    .top-header{
+        padding-top: 5%;
+        padding-left: 5%;
+        padding-right: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .LOGO {
+        margin-bottom: 5px;
+    }
+    .search-field {
+        width: 47vw;
+        padding: 10px 40px 10px 10px;
+        border: none;
+        border-radius: 100px;
+        outline: none;
+    }
+    .search-bar{
+        margin-bottom: 5px;
+    }
+    header h3{
+        margin-bottom: 5px;
     }
 }
 
@@ -232,41 +240,20 @@ footer section h3{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 3% 2%;
+        padding: 3% 10%;
     }
     .LOGO img{
-        width: 25vw;
+        width: 15vw;
+    }
+    .search-field {
+        width: 30vw;
+        padding: 10px 40px 10px 10px;
+        border: none;
+        border-radius: 100px;
+        outline: none;
     }
     header h3{
         width: 20vw;
-        padding-left: 4%;
-    }
-    header nav {
-        display: flex;
-        justify-content: space-between;
-    }
-    .lista1 {
-        display: flex;
-        margin-left: 10px;
-        list-style-type: none; 
-    }
-    .lista2 {
-        display: flex;
-        margin-right: 10px;
-        list-style-type: none;  
-    }
-    .nav-buttons1{
-        margin-right: 5px;
-    }
-    .nav-buttons2{
-        margin-left: 5px;
-    }
-    header nav ul a{
-        margin: 8px;
-        width: 10vw;
-    }
-    .burger-menu{
-        display: none;
     }
     .all-articles{
         display: flex;
@@ -289,13 +276,60 @@ footer section h3{
     li a {
         font-size: 0.6rem;
     }
+    nav {
+        display: none;
+    }
+    .burger-menu {
+        width: 40px;
+        height: 40px;
+        margin: 10px auto;
+        background-color: #1259c3;
+        border-radius: 8px;
+    }
+    
+    .fa-bars {
+        font-size: 25px;
+        color: white;
+        text-align: center;
+        line-height: 30px; 
+        margin-left: 9px;
+        margin-top: 7px;
+    }
 }
 
 /* DESKTOP */
 @media (min-width: 769px){
+    .burger-menu{
+        display: none;
+    }
     header h3{
-        width: 30vw;
         font-size: 20px;
+    }
+    nav {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .lista1 {
+        display: flex;
+        margin-left: 10px;
+        list-style-type: none; 
+    }
+    .lista2 {
+        display: flex;
+        margin-right: 10px;
+        list-style-type: none;  
+    }
+    .nav-buttons1{
+        margin-right: 5px;
+    }
+    .nav-buttons2{
+        margin-left: 5px;
+    }
+    header nav ul a{
+        margin: 8px;
+        width: 10vw;
     }
     article{
         width: 20vw;
@@ -307,14 +341,16 @@ footer section h3{
         flex-direction: row;
     }
 
+    footer{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
     footer section{
         display: flex;
     }
-
     .footer section{
         width: 25vw;
     }
-
     footer i:hover{
         color: grey;
     }
@@ -323,3 +359,4 @@ footer section h3{
         padding: 4% 3%;
     }
 }
+
