--- a/views/home.html
+++ b/views/home.html
@@ -14,9 +14,9 @@
     <header>
       <div class="top-header">
         <div class="LOGO">
-          <img class="logoHeader" src="./images/logo-mercado-liebre.svg" alt="" />
+          <a href="/"><img class="logoHeader" src="./images/logo-mercado-liebre.svg" alt="" /></a>
         </div>
-        <div>
+        <div class="search-bar">
           <input type="search" placeholder="Buscar productos, marcas y más" class="search-field">
           <button type="submit" class="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
@@ -24,16 +24,16 @@
       </div>  
       <nav>
         <ul class="lista1">
-          <li class="nav-buttons1"><a href="" target="_blank"> Ofertas</a></li>
-          <li class="nav-buttons1"><a href="" target="_blank"> Tiendas Oficiales</a></li>
-          <li class="nav-buttons1"><a href="" target="_blank"> Vender</a></li>
-          <li class="nav-buttons1"><a href="" target="_blank"> Ayuda</a></li>
+          <li class="nav-buttons1"><a href=""> Ofertas</a></li>
+          <li class="nav-buttons1"><a href=""> Tiendas Oficiales</a></li>
+          <li class="nav-buttons1"><a href=""> Vender</a></li>
+          <li class="nav-buttons1"><a href=""> Ayuda</a></li>
         </ul>
 
         <ul class="lista2">
-          <li class="nav-buttons2"><a href="/register" target="_blank"> Creá tu cuenta</a><i class="fa-regular fa-id-card"></i></li>
-          <li class="nav-buttons2"><a href="/login" target="_blank"> Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
-          <li class="nav-buttons2"><a href="" target="_blank"> Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+          <li class="nav-buttons2"><a href="/register"> Creá tu cuenta</a><i class="fa-regular fa-id-card"></i></li>
+          <li class="nav-buttons2"><a href="/login"> Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+          <li class="nav-buttons2"><a href=""> Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
         </ul>
       </nav>
       <div class="burger-menu"><i class="fa-solid fa-bars"></i></div>
