actualizacion login y register

--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
         <div class="LOGO">
           <a href="/"><img class="logoHeader" src="./images/logo-mercado-liebre.svg" alt="" /></a>
         </div>
-        <div class="search-bar">
+        <div>
           <input type="search" placeholder="Buscar productos, marcas y más" class="search-field">
           <button type="submit" class="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
