--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -24,32 +24,42 @@ a {
 header {
     background-color: #EAC926;
     width: 100%;
-    padding-bottom: 3px;
+    padding-bottom: 15px;
 }
 
 .logoHeader {
-    width: 45%;
-    margin-right: 60px;
-    margin-top: 20px;
-    margin-left: 20px;
+    width: 40vw;
+    height: auto;
 }
 
-input{
-    margin-top: 10px;
-    margin-left: 15px;
+.search-field {
+    width: 32vw;
+    padding: 10px 40px 10px 10px;
+    border: none;
+    border-radius: 100px;
+    outline: none;
+} 
+.search-button {
+    background: transparent;
+    border: none;
+    outline: none;
+    margin-left: -33px;
+} 
+.search-button img {
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
 }
 
 .header-title {
     text-align: center;
-    font-size: 12px;
     font-weight: lighter;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 ul{
     margin-top: 15px;
 }
-
 li a {
     color: black;
     font-size: 12px;
@@ -59,10 +69,9 @@ li a {
     width: 40px;
     height: 40px;
     margin: 10px auto;
-    background-color: #0022AA;
+    background-color: #1259c3;
     border-radius: 8px;
 }
-
 .fa-bars {
     font-size: 25px;
     color: white;
@@ -72,11 +81,12 @@ li a {
     margin-top: 7px;
 }
 
-.home-banner img{
+.home-banner{
     width: 100%;
 }
 
-/* ------------------------------------------ BODY ------------------------------------------*/
+/* ------------------------------------------ MAIN ------------------------------------------*/
+
 main{
     width: 90vw;
     margin:auto;
@@ -93,134 +103,131 @@ button .enviar:hover{
     background-color: #0022AA;
 } 
 
-
-
-
-/* .main-title{
+.main-title{
     font-size: 16px;
     text-align: left;
-    margin-top: 12px;
+    padding-top: 12px;
 }
 
-article{
-    margin-top: 10px;
-    border: solid 1px #ebebeb;
-}
-
-img {
-    width: 30%;
-}
-
-.descripciones{
-    text-align: left;
-    border-top: solid 1px #ebebeb;
-    padding: 15px;
-} */
-
-/* article div i{
-    position: relative;
-} */
-
-/* camioncito envio */
-/* main section article i{
-    color: #39b54a;
-    display: block;
-    font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #39b54a;
-    background-color: #FFF;
-    border-radius: 50%;
-    right: 20px;
-    top: -15px;
-}
-
-.precio{
-    font-size: 18px;
-}
-
-.descuento{
-    font-size: 16px;
-    color: #39b54a;
-    margin-left: 8px;
-}
-
-.precio-descuento{
-    display: flex;
-    margin-top: 5px;
-}
-
-article h4{
-    margin-top: 5px;
-} */
 
 /* ------------------------------------------ FOOTER ------------------------------------------ */
 
-footer{
-    margin-top: 25px;
-    text-align: center;
-}
 
-.footer-icons{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    font-size: 2em;
-    text-align: center;
-    color: #1259c3;
-    margin-bottom: 10px;
-    margin-top: 20px;
-}
-
-p{
-    font-size: 12px;
-}
-
-.copyright{
-    margin-top: 20px;
-    margin-bottom: 15px;
-    margin-left: 10px;
-    text-align: left;
-    font-size: 10px;
-}
-
-footer section h3{
-    font-size: 16px;
-}
 
 /* ------------------------- BREAKPOINTS - MEDIA QUERIES --------------------*/
 /* MOBILE */
 @media (max-width: 360px){
-    /* .descripciones h4{
-        display: none;
-    } */
-    nav {
-        display: none;
+    .top-header{
+        padding-top: 5%;
+        padding-left: 5%;
+        padding-right: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .LOGO {
+        margin-bottom: 5px;
+    }
+    .search-field {
+        width: 47vw;
+        padding: 10px 40px 10px 10px;
+        border: none;
+        border-radius: 100px;
+        outline: none;
+    }
+    .search-bar{
+        margin-bottom: 5px;
+    }
+    header h3{
+        margin-bottom: 5px;
     }
 }
 
 /* TABLETS */
 @media (min-width: 361px){
-    /* .all-articles{
+    .top-header{
         display: flex;
         justify-content: space-between;
-        flex-wrap: nowrap;
+        align-items: center;
+        padding: 3% 10%;
     }
-    article{
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    } */
-    .burger-menu{
+    .LOGO img{
+        width: 15vw;
+    }
+    .search-field {
+        width: 30vw;
+        padding: 10px 40px 10px 10px;
+        border: none;
+        border-radius: 100px;
+        outline: none;
+    }
+    header h3{
+        width: 20vw;
+    }
+}
+
+@media (max-width: 768px){
+    .header-title {
+        font-size: 0.7rem;
+    }
+    li a {
+        font-size: 0.6rem;
+    }
+    nav {
         display: none;
+    }
+    .burger-menu {
+        width: 40px;
+        height: 40px;
+        margin: 10px auto;
+        background-color: #1259c3;
+        border-radius: 8px;
+    }
+    .fa-bars {
+        font-size: 25px;
+        color: white;
+        text-align: center;
+        line-height: 30px; 
+        margin-left: 9px;
+        margin-top: 7px;
     }
 }
 
 /* DESKTOP */
 @media (min-width: 769px){
-    /* .all-articles{
+    .burger-menu{
+        display: none;
+    }
+    header h3{
+        font-size: 20px;
+    }
+    nav {
         display: flex;
         justify-content: space-between;
-        flex-wrap: nowrap;
-    } */
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .lista1 {
+        display: flex;
+        margin-left: 10px;
+        list-style-type: none; 
+    }
+    .lista2 {
+        display: flex;
+        margin-right: 10px;
+        list-style-type: none;  
+    }
+    .nav-buttons1{
+        margin-right: 5px;
+    }
+    .nav-buttons2{
+        margin-left: 5px;
+    }
+    header nav ul a{
+        margin: 8px;
+        width: 10vw;
+    }
+
 }
+
