--- a/views/login.html
+++ b/views/login.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mercado Liebre</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" >
-</head>
-<body>
-    <header>
-        <div class="top-header">
-          <div class="LOGO">
-            <a href="/"><img class="logoHeader" src="./images/logo-mercado-liebre.svg" alt="" /></a>
-          </div>
-          <div>
-            <input type="search" placeholder="Buscar productos, marcas y más">
-            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-          </div>
-          <h3 class= header-title><i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito</h3>
-        </div>  
-        <nav>
-          <ul class="lista1">
-            <li class="nav-buttons1"><a href=""> Ofertas</a></li>
-            <li class="nav-buttons1"><a href=""> Tiendas Oficiales</a></li>
-            <li class="nav-buttons1"><a href=""> Vender</a></li>
-            <li class="nav-buttons1"><a href=""> Ayuda</a></li>
-          </ul>
-  
-          <ul class="lista2">
-            <li class="nav-buttons2"><a href="/register"> Creá tu cuenta</a><i class="fa-regular fa-id-card"></i></li>
-            <li class="nav-buttons2"><a href="/login"> Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
-            <li class="nav-buttons2"><a href=""> Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
-          </ul>
-        </nav>
-        <div class="burger-menu"><i class="fa-solid fa-bars"></i></div>
-      </header>
+  </head>
 
+  <body>
+    <header>
+      <div class="top-header">
+        <div class="LOGO">
+          <a href="/"><img class="logoHeader" src="./images/logo-mercado-liebre.svg" alt="" /></a>
+        </div>
+        <div>
+          <input type="search" placeholder="Buscar productos, marcas y más" class="search-field">
+          <button type="submit" class="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <h3 class= header-title><i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito</h3>
+      </div>  
+      <nav>
+        <ul class="lista1">
+          <li class="nav-buttons1"><a href=""> Ofertas</a></li>
+          <li class="nav-buttons1"><a href=""> Tiendas Oficiales</a></li>
+          <li class="nav-buttons1"><a href=""> Vender</a></li>
+          <li class="nav-buttons1"><a href=""> Ayuda</a></li>
+        </ul>
+
+        <ul class="lista2">
+          <li class="nav-buttons2"><a href="/register"> Creá tu cuenta</a><i class="fa-regular fa-id-card"></i></li>
+          <li class="nav-buttons2"><a href="/login"> Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+          <li class="nav-buttons2"><a href=""> Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
+        </ul>
+      </nav>
+      <div class="burger-menu"><i class="fa-solid fa-bars"></i></div>
+    </header>
+    
     <main>
         <form action="/">
             <input class="login" type="text" name="user" placeholder="Nombre de usuario">
@@ -52,29 +53,7 @@
     </main>
 
     <footer>
-        <section>
-          <div class="footer-icons"><i class="fa-solid fa-credit-card"></i></div>
-          <h3>Pagá con tarjeta o en efectivo</h3>
-          <p>
-              Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-  puntos de pago. ¡Y siempre es seguro!
-          </p>
-  
-          <div class="footer-icons"><i class="fa-solid fa-gift"></i></div>
-          <h3>Envío gratis desde $ 2.500</h3>
-          <p>
-              Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de
-  productos. Es un beneficio de Mercado Puntos.
-          </p>
-  
-          <div class="footer-icons"><i class="fa-solid fa-user-shield"></i></div>
-          <h3>Seguridad, de principio a fin</h3>
-          <p>
-              ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-  porque estás siempre protegido.
-          </p>
-  
-          <h4 class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
-      </footer>
-</body>
+      <h4 class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+    </footer>
+  </body>
 </html>
