fin del register y login

--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercado Liebre</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/forms.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" >
   </head>
@@ -40,20 +40,29 @@
     </header>
     
     <main>
+        <h3>Ingresá a tu cuenta</h3>
         <form action="/">
-            <input class="login" type="text" name="user" placeholder="Nombre de usuario">
+            <h4>Nombre de usuario</h4>
+            <input class="login" type="text" name="user" placeholder="Ej: JPerez">
             <br>
-        
-            <input class="login" type="password" name="" placeholder="Contraseña">
             <br>
             
-            <button class="enviar" type="submit">Enviar</button>
+            <h4>Contraseña</h4>
+            <input class="login" type="password" name="" placeholder="">
             <br>
+            <br>
+            <br>
+            
+            <button class="enviar" type="submit">Entrar</button>
+            <br>
+            <br>
+
+            <h5>¿Todavía no tenés una cuenta?</h5>
+            <a href="/register">Registrate acá</a>
         </form>
     </main>
 
     <footer>
-      <h4 class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
     </footer>
   </body>
 </html>
