--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -91,12 +91,23 @@ main{
     width: 90vw;
     margin:auto;
     text-align: center;
+    margin-bottom: 20px;
+}
+
+main h3{
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 form{
     border: solid 1px rgb(100, 100, 100);
-    padding: 5px;
+    padding:35px 5px;
     margin-top: 10px;
+}
+form h4{
+    margin-bottom: 5px;
+    text-align: left;
+    padding-left: 13%;
 }
 
 button .enviar:hover{
@@ -227,6 +238,10 @@ button .enviar:hover{
     header nav ul a{
         margin: 8px;
         width: 10vw;
+    }
+    form{
+        width: 60vw;
+        margin:auto;
     }
 
 }
